# podterm

./: .gitignore  LICENSE  pyproject.toml
podterm/: __main__.py  app.py  config.py  db.py  dialogs.py  graphs.py  helpers.py  parser.py  runpod.py  server.py  ssh.py
podterm/static/: index.html
