[project]
name = "podterm"
version = "2.0.0"
description = "RunPod GPU training experiment manager"
requires-python = ">=3.12,<3.14"
license = "MIT"
dependencies = [
    "dearpygui>=2.0",
]

[project.scripts]
podterm = "podterm.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
