[project]
name = "podterm"
version = "2.0.0"
description = "RunPod GPU training experiment manager"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
podterm = "podterm.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
